--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fluent-ffmpeg": "^2.1.3",
-    "node-fetch": "^3.3.2"
+    "fluent-ffmpeg": "^2.1.3"
   }
 }
